Fix overlays on mobile

--- a/rdmo/overlays/static/overlays/css/overlays.scss
+++ b/rdmo/overlays/static/overlays/css/overlays.scss
@@ -1,5 +1,25 @@
+@import 'core/css/variables';
+
 .overlay {
     display: none;
+}
+
+// hide popovers on mobile
+@media (max-width: $screen-sm-max) {
+    .popover {
+        position: fixed;
+        top: 60px !important;
+        left: 20px !important;
+        right: 20px !important;
+
+        &.top {
+            margin-top: 0;
+        }
+
+        .arrow {
+            display: none;
+        }
+    }
 }
 
 .popover-buttons {
